--- a/configs/thermal-engine-athene.conf
+++ b/configs/thermal-engine-athene.conf
@@ -1,310 +1,196 @@
-[FRONT_TEMP]
-algo_type      virtual
-trip_sensor    batt_therm
-set_point      -18000
-set_point_clr  -20000
-sensors        batt_therm
-weights        90
-offsets        5000
-sampling       10000
-math           2
-sys_temp
+# SENSOR : ALIAS
+# tsens_tz_sensor2 : pop_mem
+# battery : batt_therm
+# tsens_tz_sensor10 : gpu
+# tsens_tz_sensor9 : cpu4-5-6-7
+# tsens_tz_sensor8 : cpu3
+# tsens_tz_sensor7 : cpu2
+# tsens_tz_sensor6 : cpu1
+# tsens_tz_sensor5 : cpu0
+# tsens_tz_sensor4 : L2_cache_1
 
-[REPORT-FRONT-TEMP]
-algo_type      monitor
-sampling       300000
-sensor         FRONT_TEMP
-thresholds     45000
-thresholds_clr 43000
-actions        report
-action_info    1
-
-[BACK_TEMP]
-algo_type      virtual
-trip_sensor    batt_therm
-set_point      -18000
-set_point_clr  -20000
-sensors        batt_therm
-weights        108
-sampling       10000
-math           2
-sys_temp
-
-[REPORT-BACK-TEMP]
-algo_type      monitor
-sampling       300000
-sensor         BACK_TEMP
-thresholds     45000
-thresholds_clr 43000
-actions        report
-action_info    1
-
-[SS-BATTERY-MSM]
-algo_type          ss
-sampling           1000
-sensor             msm_therm
-device             battery
-set_point          45000
-set_point_clr      40000
-
-[SS-BATTERY-CHG]
-algo_type          ss
-sampling           1000
-sensor             chg_therm
-device             battery
-set_point          54000
-set_point_clr      45000
-
-[SS-BATTERY-BATT]
-algo_type          ss
-sampling           5000
-sensor             batt_therm
-device             battery
-set_point          44000
-set_point_clr      42000
-
-[SS-CLUSTER1-MSM]
-algo_type          ss
-sampling           1000
-sensor             msm_therm
-device             cluster1
-set_point          47000
-set_point_clr      44000
+debug
+#Conf file: system/vendor/etc/thermal-engine.conf
 
 [SS-POPMEM]
-algo_type          ss
-disable
-sampling           250
-sensor             pop_mem
-device             cluster1
-set_point          70000
-set_point_clr      55000
-time_constant      2
-device_max_limit   960000
+#algo_type ss
+sampling 250
+sensor pop_mem
+device cluster1
+set_point 70000
+set_point_clr 55000
+time_constant 2
+device_max_limit 960000
 
 [SS-CPU4-5-6-7]
-algo_type          ss
-sampling           50
-sensor             cpu4-5-6-7
-device             cluster0
-set_point          85000
-set_point_clr      55000
+#algo_type ss
+sampling 50
+sensor tsens_tz_sensor9
+device cluster0
+set_point 85000
+set_point_clr 55000
+time_constant 0
 
 [SS-CPU3]
-algo_type          ss
-sampling           50
-sensor             cpu3
-device             cluster1
-set_point          85000
-set_point_clr      55000
+#algo_type ss
+sampling 50
+sensor tsens_tz_sensor8
+device cluster1
+set_point 85000
+set_point_clr 55000
+time_constant 0
 
 [SS-CPU2]
-algo_type          ss
-sampling           50
-sensor             cpu2
-device             cluster1
-set_point          85000
-set_point_clr      55000
+#algo_type ss
+sampling 50
+sensor tsens_tz_sensor7
+device cluster1
+set_point 85000
+set_point_clr 55000
+time_constant 0
 
 [SS-CPU1]
-algo_type          ss
-sampling           50
-sensor             cpu1
-device             cluster1
-set_point          85000
-set_point_clr      55000
+#algo_type ss
+sampling 50
+sensor tsens_tz_sensor6
+device cluster1
+set_point 85000
+set_point_clr 55000
+time_constant 0
 
 [SS-CPU0]
-algo_type          ss
-sampling           50
-sensor             cpu0
-device             cluster1
-set_point          85000
-set_point_clr      55000
+#algo_type ss
+sampling 50
+sensor tsens_tz_sensor5
+device cluster1
+set_point 85000
+set_point_clr 55000
+time_constant 0
+
+[SPEAKER-CAL]
+sampling 30000 30000 10 1800000
+sensor pm8950_tz
+sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor10
+temp_range 6000 10000 2000
+max_temp 45000
+offset -4000
 
 [CPU3_HOTPLUG_MONITOR]
-algo_type          monitor
-sampling           1000
-sensor             cpu3
-thresholds         100000
-thresholds_clr     80000
-actions            hotplug_3
-action_info        1
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor8
+thresholds 85000
+thresholds_clr 80000
+actions hotplug_3
+action_info 1
 
-[HOTPLUG-CPU3-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         48000
-thresholds_clr     40000
-actions            hotplug_3
-action_info        1
-override_b         9000
+[VDD_RSTR_MONITOR-TSENS10]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor10
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU3-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         47000
-thresholds_clr     41000
-actions            hotplug_3
-action_info        1
+[VDD_RSTR_MONITOR-TSENS9]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor9
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU3-PA]
-algo_type          monitor
-sampling           1000
-sensor             pa_therm0
-thresholds         44000
-thresholds_clr     40000
-actions            hotplug_3
-action_info        1
+[VDD_RSTR_MONITOR-TSENS8]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor8
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU2-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         49000
-thresholds_clr     43000
-actions            hotplug_2
-action_info        1
-override_b         8500
+[VDD_RSTR_MONITOR-TSENS7]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor7
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU2-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         48000
-thresholds_clr     44000
-actions            hotplug_2
-action_info        1
+[VDD_RSTR_MONITOR-TSENS6]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor6
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU2-PA]
-algo_type          monitor
-sampling           1000
-sensor             pa_therm0
-thresholds         45000
-thresholds_clr     41000
-actions            hotplug_2
-action_info        1
+[VDD_RSTR_MONITOR-TSENS5]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor5
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU1-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         50000
-thresholds_clr     45000
-actions            hotplug_1
-action_info        1
-override_b         8500
+[VDD_RSTR_MONITOR-TSENS4]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor4
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU1-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         49000
-thresholds_clr     46000
-actions            hotplug_1
-action_info        1
+[VDD_RSTR_MONITOR-TSENS3]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor3
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU1-PA]
-algo_type          monitor
-sampling           1000
-sensor             pa_therm0
-thresholds         46000
-thresholds_clr     42000
-actions            hotplug_1
-action_info        1
+[VDD_RSTR_MONITOR-TSENS2]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor2
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU6-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         51000
-thresholds_clr     47000
-actions            hotplug_6
-action_info        1
-override_b         8000
+[VDD_RSTR_MONITOR-TSENS1]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor1
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU6-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         50000
-thresholds_clr     46000
-actions            hotplug_6
-action_info        1
+[VDD_RSTR_MONITOR-TSENS0]
+#algo_type monitor
+sampling 1000
+sensor tsens_tz_sensor0
+thresholds 5000
+thresholds_clr 10000
+actions vdd_restriction
+action_info 1
+descending
 
-[HOTPLUG-CPU6-PA]
-algo_type          monitor
-sampling           1000
-sensor             pa_therm0
-thresholds         47000
-thresholds_clr     43000
-actions            hotplug_6
-action_info        1
-
-[HOTPLUG-CPU7-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         51000
-thresholds_clr     45000
-actions            hotplug_7
-action_info        1
-override_b         8000
-
-[HOTPLUG-CPU7-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         50000
-thresholds_clr     46000
-actions            hotplug_7
-action_info        1
-
-[HOTPLUG-CPU7-PA]
-algo_type          monitor
-sampling           1000
-sensor             pa_therm0
-thresholds         47000
-thresholds_clr     43000
-actions            hotplug_7
-action_info        1
-
-[HOTPLUG-CPU5-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         53000
-thresholds_clr     51000
-actions            hotplug_5
-action_info        1
-override_b         6000
-
-[HOTPLUG-CPU5-CHG]
-algo_type          monitor
-sampling           1000
-sensor             chg_therm
-thresholds         52000
-thresholds_clr     50000
-actions            hotplug_5
-action_info        1
-
-[HOTPLUG-CPU0-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         57000
-thresholds_clr     54000
-actions            hotplug_0
-action_info        1
-override_b         3000
-
-[MONITOR-CAMERA-MSM]
-algo_type          monitor
-sampling           1000
-sensor             msm_therm
-thresholds         49000    56000    60000
-thresholds_clr     44000    53000    58000
-actions            camera   camera   camera
-action_info        1        2        3
